# rustFrida

./: Cargo.toml  README.md
agent/src/: lib.rs  quickjs_loader.rs  recompiler.rs  stalker.rs
agent/src/trace/: arm64_analysis.rs  mod.rs  ptrace_ops.rs  transformer.rs
qbdi/src/: lib.rs
quickjs-hook/: build.rs
quickjs-hook/src/: arm64_relocator.c  arm64_relocator.h  hook_engine.c  hook_engine.h  hook_engine_art.c  hook_engine_inline.c  hook_engine_internal.h  hook_engine_mem.c  hook_engine_oat_patch.c  hook_engine_redir.c  lib.rs  quickjs_wrapper.c  quickjs_wrapper.h  value.rs
quickjs-hook/src/jsapi/: mod.rs  ptr.rs
quickjs-hook/src/jsapi/hook_api/: callback.rs  functions.rs  mod.rs  registry.rs
quickjs-hook/src/jsapi/java/: art_class.rs  art_controller.rs  art_method.rs  callback.rs  java_boot.js  java_inspect_api.rs  jni_core.rs  js_api.rs  mod.rs  reflect.rs
quickjs-hook/src/jsapi/java/callback/: hook.rs  mod.rs
quickjs-hook/src/jsapi/java/java_hook_api/: install.rs  install_support.rs
quickjs-hook/src/jsapi/jni/: api.rs  jni_boot.js  mod.rs
quickjs-hook/src/jsapi/memory/: helpers.rs  mod.rs  read.rs  write.rs
quickjs-hook/src/jsapi/module/: api.rs  maps.rs
rust_frida/: Cargo.toml
rust_frida/src/: args.rs  communication.rs  injection.rs  main.rs  proc_mem.rs  process.rs  props.rs  repl.rs  spawn.rs
