[features]
frida-gum = []
qbdi = []

[package]
name = "rust_frida"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "ARM64架构下的动态库注入和远程函数调用工具"

[dependencies]
ldmonitor = { path = "../ldmonitor" }
libc = "1.0.0-alpha.1"
clap = { version = "4.5.37", features = ["derive"] }
nix = { version = "0.30.1", features = ["ptrace", "socket", "uio"] }
goblin = "0.9"
once_cell = "1.21.3"
rand = "0.8"
paste = "1.0.15"
rustyline = "15"
#bytes = "1.0"
#anyhow = "1"

[[bin]]
name = "rustfrida"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true
strip = false

[profile.release]
opt-level = 3
lto = true
strip = false
codegen-units = 1
panic = 'abort'
